# lrb-prototype

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  client_1.tr  client_10.tr  client_100.tr  client_100k.tr  client_10k.tr  client_1k.tr  origin_vlen_large.tr  setup_notes.txt
client/: .gitignore  client.cpp
go-client/: client.go
measurement/: measure.sh
origin/: .gitignore  origin.cpp
scripts/: .gitignore  get_byte_miss_ratio.sh  get_trace.sh  instrument_latency.sh  measure.sh  measure_new.sh  measurements.job  parallel_measure.sh  remap_local.sh  remap_remote.sh  segment_ps.sh  segment_static.sh  segment_top.sh  set_server_now.sh  set_server_past.sh  start_client.sh  start_origin.sh  start_proxy.sh
server/: nginx.conf  nginx_pni.conf
test/: server.cpp
trafficserver-8.0.3/: .gitignore  CMakeLists.txt  debug_setup.sh  setup.sh
trafficserver-8.0.3/include/tscore/: CryptoHash.h
trafficserver-8.0.3/iocore/aio/: AIO.cc
trafficserver-8.0.3/iocore/cache/: Cache.cc  CacheDir.cc  CacheRead.cc  CacheWrite.cc  I_Cache.h  Makefile.am  P_Cache.h  (+10 more)
trafficserver-8.0.3/mgmt/: RecordsConfig.cc
tsconfig/: .gitignore  logging.yaml  plugin.config  records.config  remap.config  storage.config  trafficserver-release
tsconfig_backup/: hosting_4.config  hosting_8.config  storage.config  storage_4.config  storage_8.config  storage_pni.config  volume_4.config  volume_8.config
tsconfig_gcp/: hosting.config  records.config  remap.config  storage.config  volume.config
tsconfig_pni/: .gitignore  records.config  remap.config  storage.config  trafficserver-release
(+11 files in other folders)
